# opendebt-debt-service/src/main/java/dk/ufst/opendebt/debtservice/dto/InterestPauseReasonCode.java
@@ -1,0 +1,5 @@
+package dk.ufst.opendebt.debtservice.dto;
+
+public enum InterestPauseReasonCode {
+  CLAIM_UNCLEAR_DEBTOR_CANNOT_PAY
+}
